--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node dist/server.js",
+    "start": "node dist/index.js",
     "dev": "nodemon --watch 'src/**/*.ts' --exec nodemon src/index.ts",
     "lint": "eslint 'src/**/*.ts'"
   },
